--- a/DigitizingDataAdminApp/Views/Dashboard/VslaDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaDetails.cshtml
@@ -66,6 +66,10 @@
         <td><strong>@Html.DisplayName("Status of VSLA")</strong></td>
         <td>@Html.DisplayFor(model => model.Status)</td>
     </tr>
+    <tr>
+        <td><strong>@Html.DisplayName("Group Account Number")</strong></td>
+        <td>@Html.DisplayFor(model => model.GroupAccountNumber)</td>
+    </tr>
 </table>
 <p>
     <strong>
