--- a/DigitizingDataAdminApp/Views/Dashboard/VslaDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaDetails.cshtml
@@ -73,7 +73,7 @@
 </table>
 <p>
     <strong>
-        @Html.ActionLink("Edit", "EditVsla", new { id = Model.VslaId }) |
+       @* @Html.ActionLink("Edit", "EditVsla", new { id = Model.VslaId }) |*@
                 @Html.ActionLink("Back to List", "VslaData")
     </strong>
 </p>
