--- a/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
@@ -13,7 +13,7 @@
 </p>
 
 <div style="width: auto; min-width: 900px; margin: 0 auto;">
-    <table class="display" style="width: 100%;" id="data-table">
+    <table class="display" style="width: 100%;font-size: small;" id="data-table">
         <thead>
             @if (@Model.sessionUserLevel == 1)
             { 
