--- a/DigitizingDataAdminApp/Views/Dashboard/VslaMembers.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaMembers.cshtml
@@ -13,7 +13,7 @@
     <strong>@Html.ActionLink("Back to VSLAs", "VslaData")</strong>
 </div>
 <div style="width: auto; min-width: 900px; margin: 0 auto;">
-    <table class="display" style="width: 100%;" id="data-table">
+    <table class="display" style="width: 100%;font-size: small;" id="data-table">
         <thead>
             <tr>
                 <th>Member No.</th>
