--- a/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
@@ -18,12 +18,6 @@
     @Styles.Render("~/Content/themes/base/css", "/Content/css")
     @RenderSection("scripts", required: false)
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" />
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#data-table').dataTable();
-        });
-    </script>
-
     <style type="text/css">
         .vertical-align, .col-md-2 {
             min-height: 450px;
@@ -39,42 +33,51 @@
             #side-navigation li a {
                 text-decoration: none;
             }
+
+        td {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        #data-table {
+            font-size: small;
+        }
     </style>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#data-table').dataTable();
+        });
+    </script>
+
 </head>
 <body>
 
     <div class="container wrap sidebar-right">
-        <div class="container-fluid" style="margin-top: 40px; margin-bottom: 20px;">
-            <div class="row">
-                <div class="navbar-header col-mod-12">
-                    <img src="~/Content/Images/logo.jpeg" style="height: 40px; padding-left: 40px;" />
-                </div>
+        <div class="container-fluid" style="margin-top: 40px;">
+            <div class="navbar-header col-mod-12">
+                <img src="~/Content/Images/logo.jpeg" style="height: 40px; padding-left: 40px;" />
             </div>
         </div>
 
         <div class="model-body row-fluid">
-            <div class="col-md-2">
-                <div class="well sidebar-offcanvas vertical-align">
-                    <ul class="nav  nav-pills nav-stacked" role="navigation" id="side-navigation">
-                        <li><strong>@Html.ActionLink("Home", "Dashboard", "Dashboard") </strong></li>
-                        <li><strong>@Html.ActionLink("VSLA Groups", "VslaData", "Dashboard")</strong></li>
-                        <li><strong>@Html.ActionLink("Tech Trainers", "CbtData", "Dashboard")</strong></li>
-                        <li><strong>@Html.ActionLink("System Users", "UsersData", "Dashboard")</strong></li>
-                        <li><strong>@Html.ActionLink("Reporting", "DatabaseScriptedInformation", "Dashboard")</strong></li>
-                        <li><strong>@Html.ActionLink("Logout", "Logout")</strong></li>
-                    </ul>
-
-                </div>
+            <div class="well sidebar-offcanvas vertical-align col-md-2">
+                <ul class="nav  nav-pills nav-stacked" role="navigation" id="side-navigation">
+                    <li><strong>@Html.ActionLink("Dashboard", "Dashboard", "Dashboard") </strong></li>
+                    <li><strong>@Html.ActionLink("VSLA Groups", "VslaData", "Dashboard")</strong></li>
+                    <li><strong>@Html.ActionLink("Technical Trainers", "TechnicalTrainers", "Dashboard")</strong></li>
+                    <li><strong>@Html.ActionLink("System Users", "SystemUsers", "Dashboard")</strong></li>
+                    <li><strong>@Html.ActionLink("Data Reporting", "VslaReporting", "Dashboard")</strong></li>
+                    <li><strong>@Html.ActionLink("Logout", "Logout")</strong></li>
+                </ul>
             </div>
-            <div class="col-md-8" style="margin-left: 50px;">
+            <div class="col-md-8" style="margin-left: 10px;">
                 @RenderBody()
             </div>
         </div>
 
         <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px; height: 50px; background-color: #fff;">
-
             <p style="text-align: center;">&copy; @DateTime.Now.Year - LedgerLink Manager</p>
-
         </div>
     </div>
 
