--- a/DigitizingDataAdminApp/Views/Shared/_CustomLoginPage.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLoginPage.cshtml
@@ -17,13 +17,11 @@
 
     <div class="container wrap sidebar-right">
         <div class="container" style="margin-top: 100px; margin-bottom: 200px;">
-            <div class="vertical-center-row horizontal-center-row">
-                <div class="col-sm-12 col-md-10 col-md-offset-1">
+                <div class="col-sm-12 col-md-10 col-md-offset-1 vertical-center-row horizontal-center-row">
                     <div class="center col-md-8" style="float: none; margin: 0 auto;">
                         @RenderBody()
                     </div>
-                </div>
-            </div>
+                </div>        
         </div>
 
         <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px; height: 50px; background-color: #fff;">
