Implemented a new UI for the system users' page

--- a/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
@@ -39,7 +39,7 @@
         </tr>
     </table>
     <p>
-        <input class="btn btn-small btn-primary" type="submit" value="Add new User" style="width: 150px;" />
+        <input class="btn btn-small btn-primary" type="submit" name="AddUser" value="Add new User" style="width: 150px;" />
         | 
          @Html.ActionLink("Back to List", "UsersData")
     </p>
