--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
@@ -38,7 +38,7 @@
             |
             <label>OR</label>
             |
-        @Html.ActionLink("Back to List", "UsersData")
+        @Html.ActionLink("Back to List", "SystemUsers")
         </p>
     </div>
 }
