--- a/DigitizingDataAdminApp/Views/Dashboard/EditUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditUser.cshtml
@@ -50,7 +50,7 @@
     <p>
         <input class="btn btn-small btn-primary" type="submit" value="Update" style="width: 100px;" />
         | 
-         @Html.ActionLink("Back to List", "UsersData")
+         @Html.ActionLink("Back to List", "SystemUsers")
     </p>
 }
 
