--- a/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
@@ -32,5 +32,5 @@
 </table>
 <p>
     @Html.ActionLink("Edit", "EditUser", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "UsersData")
+    @Html.ActionLink("Back to List", "SystemUsers")
 </p>
