--- a/DigitizingDataAdminApp/Views/Dashboard/TechnicalTrainers.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/TechnicalTrainers.cshtml
@@ -1,75 +1,150 @@
-﻿@model DigitizingDataAdminApp.Models.AllCbtInformation
+﻿@model DigitizingDataAdminApp.Models.AllTrainersInformation
 @{
     Layout = "~/Views/Shared/_CustomLayout.cshtml";
     ViewBag.Title = "CbtData";
 }
+<script type="text/javascript">
+    $(function () {
+        $("#tabs").tabs();
+    });
+</script>
 
-<h4><strong>Technology Trainers(TTs)</strong></h4>
-<hr />
-@if(@Model.SessionUserLevel == 1) {
-<p>
-    <a href="@Url.Action("AddCbt", "Dashboard")"><strong>Add New Technology Trainer</strong></a>
-</p>
-}
+<div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
 
-<div style="width: auto; min-width: 900px; margin: 0 auto;">
-        <table class="display" style="width: 100%;font-size: small;" id="data-table">
-        <thead>
-            @if(@Model.SessionUserLevel == 1) {
-            <tr>
-                <th>ID</th>
-                <th>FullName</th>
-                <th>District</th>
-                <th>PhoneNumber</th>
-                <th>Email</th>
-                <th>Status</th>
-                <th>Details</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            } else {
-               <tr>
-                <th>ID</th>
-                <th>FullName</th>
-                <th>District</th>
-                <th>PhoneNumber</th>
-                <th>Email</th>
-                <th>Status</th>
-                <th>Details</th>
-            </tr>  
-            }
-        </thead>
-        <tbody>
-            @foreach (var item in Model.AllCbtList)
-            { 
-                if(@Model.SessionUserLevel == 1) {
+    <ul>
+        <li><a href="#viewtrainers">Technical Trainers</a></li>
+        <li><a href="#addtrainer">Add Technical Trainer</a></li>
+    </ul>
+
+    <div id="viewtrainers">
+        <h5><strong>Technical Trainers</strong></h5>
+        <div style="width: auto; min-width: 900px; margin: 0 auto;">
+            <table class="display" style="width: 100%; font-size: small;" id="data-table">
+                <thead>
+                    @if (@Model.SessionUserLevel == 1)
+                    {
+                        <tr>
+                            <th>ID</th>
+                            <th>FullName</th>
+                            <th>District</th>
+                            <th>PhoneNumber</th>
+                            <th>Email</th>
+                            <th>Status</th>
+                            <th>Details</th>
+                            <th>Edit</th>
+                            <th>Delete</th>
+                        </tr>
+                    }
+                    else
+                    {
+                        <tr>
+                            <th>ID</th>
+                            <th>FullName</th>
+                            <th>District</th>
+                            <th>PhoneNumber</th>
+                            <th>Email</th>
+                            <th>Status</th>
+                            <th>Details</th>
+                        </tr>  
+                    }
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.AllTrainersList)
+                    {
+                        if (@Model.SessionUserLevel == 1)
+                        {
+                        <tr>
+                            <td>@item.Id</td>
+                            <td>@item.Name</td>
+                            <td>@item.Region</td>
+                            <td>@item.PhoneNumber</td>
+                            <td>@item.Email</td>
+                            <td>@item.Status</td>
+                            <td><a href="@Url.Action("TrainersDetails", "Dashboard", new { id = item.Id })">
+                                <img  src="@Url.Content("~/Content/Images/details.png")"/></a></td>
+                            <td><a href="@Url.Action("EditTrainerDetails", "Dashboard", new { id = item.Id })">
+                                <img  src="@Url.Content("~/Content/Images/edit.png")"/></a></td>
+                            <td><a href="@Url.Action("DeleteTrainer", "Dashboard", new { id = item.Id })">
+                                <img  src="@Url.Content("~/Content/Images/delete.png")"/></a></td>
+                        </tr>
+                        }
+                        else
+                        {
+                        <tr>
+                            <td>@item.Id</td>
+                            <td>@item.Name</td>
+                            <td>@item.Region</td>
+                            <td>@item.PhoneNumber</td>
+                            <td>@item.Email</td>
+                            <td>@item.Status</td>
+                            <td><a href="@Url.Action("TrainersDetails", "Dashboard", new { id = item.Id })">
+                                <img  src="@Url.Content("~/Content/Images/details.png")"/></a></td>
+                        </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div id="addtrainer">
+        @using (Html.BeginForm("AddTechnicalTrainer", "Dashboard", FormMethod.Post, new { id = "addnewtrainer" }))
+        {
+            @Html.ValidationSummary(true)
+            <h6 style="text-align: center;"><strong>Add New Technology Trainer </strong></h6>
+            <table class="table table-bordered">
                 <tr>
-                    <td>@item.Id</td>
-                    <td>@item.Name</td>
-                    <td>@item.Region</td>
-                    <td>@item.PhoneNumber</td>
-                    <td>@item.Email</td>
-                    <td>@item.Status</td>
-                    <td><a href="@Url.Action("CbtDetails", "Dashboard", new { id = item.Id })">
-                        <img  src="@Url.Content("~/Content/Images/details.png")"/></a></td>
-                    <td><a href="@Url.Action("EditCbt", "Dashboard", new { id = item.Id })">
-                        <img  src="@Url.Content("~/Content/Images/edit.png")"/></a></td>
-                    <td><a href="@Url.Action("DeleteCbt", "Dashboard", new { id = item.Id })">
-                        <img  src="@Url.Content("~/Content/Images/delete.png")"/></a></td>
+                    <td><strong>@Html.DisplayName("First Name")</strong></td>
+                    <td>@Html.EditorFor(model => model.FirstName)
+                        @Html.ValidationMessageFor(model => model.FirstName)</td>
                 </tr>
-                } else {
                 <tr>
-                    <td>@item.Id</td>
-                    <td>@item.Name</td>
-                    <td>@item.Region</td>
-                    <td>@item.PhoneNumber</td>
-                    <td>@item.Email</td>
-                    <td>@item.Status</td>
-                    <td><a href="@Url.Action("CbtDetails", "Dashboard", new { id = item.Id })">
-                        <img  src="@Url.Content("~/Content/Images/details.png")"/></a></td>
+                    <td><strong>@Html.DisplayName("Last Name")</strong></td>
+                    <td>@Html.EditorFor(model => model.LastName)
+                        @Html.ValidationMessageFor(model => model.LastName)</td>
                 </tr>
-                }
-            }
-        </tbody>
-    </table>
+                <tr>
+                    <td><strong>@Html.DisplayName("Username")</strong></td>
+                    <td>@Html.EditorFor(model => model.Username)
+                        @Html.ValidationMessageFor(model => model.Username)</td>
+                </tr>
+                <tr>
+                    <td><strong>@Html.DisplayName("Pass Key")</strong></td>
+                    <td>@Html.EditorFor(model => model.Passkey)
+                        @Html.ValidationMessageFor(model => model.Passkey)</td>
+                </tr>
+                <tr>
+                    <td><strong>@Html.DisplayName("Region")</strong></td>
+                    <td>@Html.DropDownList("RegionId", Model.VslaRegionsModel, new { @style = "width:175px; height:30px;" })
+                        @Html.ValidationMessageFor(model => model.Region)
+                    </td>
+                </tr>
+
+                <tr>
+                    <td><strong>@Html.DisplayName("Phone Number")</strong></td>
+                    <td>@Html.TextBoxFor(model => model.PhoneNumber, new { @Placeholder = "e.g 0774123567" })
+                        @Html.ValidationMessageFor(model => model.PhoneNumber)</td>
+                </tr>
+                <tr>
+                    <td><strong>@Html.DisplayName("Email")</strong></td>
+                    <td>@Html.EditorFor(model => model.Email)
+                        @Html.ValidationMessageFor(model => model.Email)</td>
+                </tr>
+                <tr>
+                    <td><strong>@Html.DisplayName("Status")</strong></td>
+                    <td>@Html.DropDownList("Status_Id", Model.StatusType, new { @style = "width:250px; height:30px;" })
+                        @Html.ValidationMessageFor(model => model.Status)
+                    </td>
+                </tr>
+            </table>
+            <p>
+                <input class="btn btn-small btn-primary" type="submit" name="AddTechnicalTrainer" value=" Create " style="width: 100px;" />
+            </p>
+        }
+
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+    </div>
+
 </div>
