Added UI changes for the whole app to use tabs as default style for organizing data on pages

--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
@@ -1,44 +1,52 @@
 ﻿@model DigitizingDataAdminApp.Models.UserInformation
 
 @{
-    Layout = "~/Views/Shared/_CustomLayout.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
     ViewBag.Title = "DeleteUser";
 }
+<script type="text/javascript">
+    $(function () {
+        $("#tabs").tabs();
+    });
+</script>
+<div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
 
-<h4 style="text-align: center;"><strong>@Html.DisplayFor(model => model.Fullname)</strong></h4>
-<hr />
-<table class="table table-bordered">
-    <tr>
-        <td><strong>@Html.DisplayName("Username")</strong></td>
-        <td>@Html.DisplayFor(model => model.Username)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Fullname")</strong></td>
-        <td>@Html.DisplayFor(model => model.Fullname)</td>
-    </tr>
+    <ul>
+        <li><a href="#delete"><strong>@Html.DisplayFor(model => model.Fullname)</strong></a></li>
+    </ul>
 
-    <tr>
-        <td><strong>@Html.DisplayName("Email")</strong></td>
-        <td>@Html.DisplayFor(model => model.Email)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Date Registered")</strong></td>
-        <td>@Html.DisplayFor(model => model.FormattedDateCreated)
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Access Level")</strong></td>
-        <td>@Html.DisplayFor(model => model.UserLevel)</td>
-    </tr>
-</table>
-@using (Html.BeginForm())
-{
-    <div class="form-group">
-        <p>
-            <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
-            |
-            <label>OR</label>
-            |
-        @Html.ActionLink("Back to List", "SystemUsers")
-        </p>
+    <div id="delete">
+        <p style="text-align: right;"><strong>@Html.ActionLink("Back", "SystemUsers")</strong></p>
+        <table class="table table-bordered">
+            <tr>
+                <td><strong>@Html.DisplayName("Username")</strong></td>
+                <td>@Html.DisplayFor(model => model.Username)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Fullname")</strong></td>
+                <td>@Html.DisplayFor(model => model.Fullname)</td>
+            </tr>
+
+            <tr>
+                <td><strong>@Html.DisplayName("Email")</strong></td>
+                <td>@Html.DisplayFor(model => model.Email)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Date Registered")</strong></td>
+                <td>@Html.DisplayFor(model => model.FormattedDateCreated)
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Access Level")</strong></td>
+                <td>@Html.DisplayFor(model => model.UserLevel)</td>
+            </tr>
+        </table>
+        @using (Html.BeginForm())
+        {
+            <div class="form-group">
+                <p>
+                    <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
+                </p>
+            </div>
+        }
     </div>
-}
+</div>
