--- a/DigitizingDataAdminApp/Views/Dashboard/Dashboard.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/Dashboard.cshtml
@@ -1,42 +1,53 @@
 ﻿@model DigitizingDataAdminApp.Models.DashboardSummary
 @{
-    Layout = "~/Views/Shared/_CustomLayout.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
+<script type="text/javascript">
+    $(function () {
+        $("#tabs").tabs();
+    });
+</script>
+<div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
 
-<h4><strong>Dashboard | Summary</strong></h4>
-<hr />
-<table>
-    <tr style="margin-bottom:10px;">
-        <td>
-            <h6><strong>VSLAs : @Html.DisplayFor(model => model.totalVslas)<br />
-                Total Submissions : @Html.DisplayFor(model => model.totalSubmissions)<br />
-                Total Meetings Held : @Html.DisplayFor(model => model.totalMeeetings)
-            </strong></h6>
-        </td>
-        <td>
-            <h6><strong>Total Members : @Html.DisplayFor(model => model.totalMembers)
-                <br />
-                Males : @Html.DisplayFor(model => model.maleMembers)
-                <br />
-                Females : @Html.DisplayFor(model => model.femaleMembers)
-            </strong></h6>
-        </td>
-        <td>
-            <h6><strong>Total Savings : Shs @Html.DisplayFor(model => model.totalSavings)<br />
-                Total Loans given : Shs @Html.DisplayFor(model => model.totalLoans)<br />
-                Loan Repayments : Shs @Html.DisplayFor(model => model.totalLoanRepayment)
-            </strong></h6>
-        </td>
+    <ul>
+        <li><a href="#dashboard"><strong>Dashboard | Summary</strong></a></li>
+    </ul>
 
-    </tr>
-    <tr>
-        <td>
-            <img src="~/Dashboard/showMembersByGender" />
-        </td>
-        <td>
-            <img src="~/Dashboard/showAttendance" />
-        </td>
-        <td>
-            <img src="~/Dashboard/showSavingsLoansAndRepayments" />
-        </td>
-</table>
+    <div id="dashboard">
+        <table>
+            <tr style="margin-bottom: 10px;">
+                <td>
+                    <h6><strong>VSLAs : @Html.DisplayFor(model => model.totalVslas)<br />
+                        Total Submissions : @Html.DisplayFor(model => model.totalSubmissions)<br />
+                        Total Meetings Held : @Html.DisplayFor(model => model.totalMeeetings)
+                    </strong></h6>
+                </td>
+                <td>
+                    <h6><strong>Total Members : @Html.DisplayFor(model => model.totalMembers)
+                        <br />
+                        Males : @Html.DisplayFor(model => model.maleMembers)
+                        <br />
+                        Females : @Html.DisplayFor(model => model.femaleMembers)
+                    </strong></h6>
+                </td>
+                <td>
+                    <h6><strong>Total Savings : Shs @Html.DisplayFor(model => model.totalSavings)<br />
+                        Total Loans given : Shs @Html.DisplayFor(model => model.totalLoans)<br />
+                        Loan Repayments : Shs @Html.DisplayFor(model => model.totalLoanRepayment)
+                    </strong></h6>
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <img src="~/Dashboard/showMembersByGender" />
+                </td>
+                <td>
+                    <img src="~/Dashboard/showAttendance" />
+                </td>
+                <td>
+                    <img src="~/Dashboard/showSavingsLoansAndRepayments" />
+                </td>
+        </table>
+    </div>
+</div>
