--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteTrainer.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteTrainer.cshtml
@@ -1,56 +1,67 @@
 ﻿@model DigitizingDataAdminApp.Models.TrainerInformation
 
 @{
-    Layout = "~/Views/Shared/_CustomLayout.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
     ViewBag.Title = "Delete Technical Trainer";
 }
+<script type="text/javascript">
+    $(function () {
+        $("#tabs").tabs();
+    });
+</script>
+<div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
 
-<h4 style="text-align: center;"><strong>@Html.DisplayFor(model => model.Name) from the system</strong> </h4>
-<hr />
-<table class="table table-bordered">
-    <tr>
-        <td><strong>@Html.DisplayName("First Name")</strong></td>
-        <td>@Html.DisplayFor(model => model.FirstName)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Last Name")</strong></td>
-        <td>@Html.DisplayFor(model => model.LastName)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Username")</strong></td>
-        <td>@Html.DisplayFor(model => model.Username)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Pass Key")</strong></td>
-        <td>@Html.DisplayFor(model => model.Passkey)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("District")</strong></td>
-        <td>@Html.DisplayFor(model => model.Region)</td>
-    </tr>
+    <ul>
+        <li><a href="#delete"><strong>Delete @Html.DisplayFor(model => model.FirstName) from the system</strong></a></li>
+    </ul>
 
-    <tr>
-        <td><strong>@Html.DisplayName("Phone Number")</strong></td>
-        <td>@Html.DisplayFor(model => model.PhoneNumber)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Email")</strong></td>
-        <td>@Html.DisplayFor(model => model.Email)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Status")</strong></td>
-        <td>@Html.DisplayFor(model => model.Status)</td>
-    </tr>
-</table>
-@using (Html.BeginForm())
-{
-    <div class="form-group">
-        <p>
-            <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
-            |
+    <div id="delete">
+        <table class="table table-bordered">
+            <tr>
+                <td><strong>@Html.DisplayName("First Name")</strong></td>
+                <td>@Html.DisplayFor(model => model.FirstName)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Last Name")</strong></td>
+                <td>@Html.DisplayFor(model => model.LastName)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Username")</strong></td>
+                <td>@Html.DisplayFor(model => model.Username)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Pass Key")</strong></td>
+                <td>@Html.DisplayFor(model => model.Passkey)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("District")</strong></td>
+                <td>@Html.DisplayFor(model => model.Region)</td>
+            </tr>
+
+            <tr>
+                <td><strong>@Html.DisplayName("Phone Number")</strong></td>
+                <td>@Html.DisplayFor(model => model.PhoneNumber)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Email")</strong></td>
+                <td>@Html.DisplayFor(model => model.Email)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Status")</strong></td>
+                <td>@Html.DisplayFor(model => model.Status)</td>
+            </tr>
+        </table>
+        @using (Html.BeginForm())
+        {
+            <div class="form-group">
+                <p>
+                    <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
+                    |
             <label>OR</label>
-            |
-        @Html.ActionLink("Back to List", "TechnicalTrainers")
-        </p>
+                    |
+        @Html.ActionLink("Back", "TechnicalTrainers")
+                </p>
+            </div>
+        }
     </div>
-}
+</div>
