--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -1,45 +1,66 @@
 ﻿@model DigitizingDataAdminApp.Models.AllSingleMeetingProcedures
 @{
-    Layout = "~/Views/Shared/_CustomLayout.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
     ViewBag.Title = "SingleMeetingDetails";
 }
-<h4><strong>Details for the Meeting held on @Model.meetingDate.Value.ToShortDateString() </strong></h4>
-<p>
-    <a href="@Url.Action("ExportSingleMeetingDetailsCSV", "Dashboard", new { id = @Model.vslaId })">
-        <strong>Export to CSV</strong>
-    </a>
-    |
-    <strong>@Html.ActionLink("Back to VSLAs", "VslaData")</strong>
-</p>
-<div style="width: auto; min-width: 900px; margin: 0 auto;">
-    <table class="display" style="width: 100%;" id="data-table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Attended</th>
-                <th>Amount  Saved</th>
-                <th>Loan  Number</th>
-                <th>Loan  Amount</th>
-                <th>Fines</th>
-                <th>Loan  Cleared</th>
-                <th>Loan Outstanding</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.allMeetingData) { 
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.memberName</td>
-                <td>@item.isPresent</td>
-                <td>@item.amountSaved</td>
-                <td>@item.loanNumber</td>
-                <td>@item.principleAmount</td>
-                <td>@item.finedAmount</td>
-                <td>@item.loanRepaymentAmount</td>
-                <td>@item.remainingBalanceOnLoan</td>
-            </tr>
-            }
-        </tbody>
-    </table>
+<script type="text/javascript">
+    $(function () {
+        $("#tabs").tabs();
+    });
+</script>
+
+<div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
+
+    <ul>
+        <li><a href="#details"><strong>Meeting held on @Model.meetingDate.Value.ToShortDateString()</strong></a></li>
+    </ul>
+    <div id="details">
+        <p style="text-align: right;">
+            <a href="@Url.Action("ExportSingleMeetingDetailsCSV", "Dashboard", new { id = @Model.vslaId })">
+                <strong>Export to CSV</strong>
+            </a>
+            |
+    <strong>@Html.ActionLink("Back", "VslaGroupInformation")</strong>
+        </p>
+        <div style="width: auto; min-width: 900px; margin: 0 auto;">
+            <table class="display" style="width: 100%;" id="data-table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Attended</th>
+                        <th>Amount  Saved</th>
+                        <th>Loan  Number</th>
+                        <th>Loan  Amount</th>
+                        <th>Fines</th>
+                        <th>Loan  Cleared</th>
+                        <th>Loan Outstanding</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.allMeetingData)
+                    { 
+                        <tr>
+                            <td>@item.Id</td>
+                            <td>@item.memberName</td>
+                            <td>@item.isPresent</td>
+                            <td>@item.amountSaved</td>
+                            <td>@item.loanNumber</td>
+                            <td>@item.principleAmount</td>
+                            <td>@item.finedAmount</td>
+                            <td>@item.loanRepaymentAmount</td>
+                            <td>@item.remainingBalanceOnLoan</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+
 </div>
+
+
+
+
+
