--- a/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
@@ -1,36 +1,47 @@
 ﻿@model DigitizingDataAdminApp.Models.UserInformation
 
 @{
-    Layout = "~/Views/Shared/_CustomLayout.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
     ViewBag.Title = "UserDetails";
 }
+<script type="text/javascript">
+    $(function () {
+        $("#tabs").tabs();
+    });
+</script>
+<div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
 
-<h4 style="text-align: center;"><strong>User Details for @Html.DisplayFor(model => model.Fullname) </strong></h4>
-<hr />
-<table class="table table-bordered">
-    <tr>
-        <td><strong>@Html.DisplayName("Username")</strong></td>
-        <td>@Html.DisplayFor(model => model.Username)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Fullname")</strong></td>
-        <td>@Html.DisplayFor(model => model.Fullname)</td>
-    </tr>
+    <ul>
+        <li><a href="#details"><strong>User Details for @Html.DisplayFor(model => model.Fullname) </strong></a></li>
+    </ul>
 
-    <tr>
-        <td><strong>@Html.DisplayName("Email")</strong></td>
-        <td>@Html.DisplayFor(model => model.Email)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Date Registered")</strong></td>
-        <td>@Html.DisplayFor(model => model.FormattedDateCreated)</td>
-    </tr>
-    <tr>
-        <td><strong>@Html.DisplayName("Access Level")</strong></td>
-        <td>@Html.DisplayFor(model => model.UserLevel)</td>
-    </tr>
-</table>
-<p>
-    @Html.ActionLink("Edit", "EditUser", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "SystemUsers")
-</p>
+    <div id="details">
+        <p style="text-align:right;"><strong>@Html.ActionLink("Back", "SystemUsers")</strong></p>
+        <table class="table table-bordered">
+            <tr>
+                <td><strong>@Html.DisplayName("Username")</strong></td>
+                <td>@Html.DisplayFor(model => model.Username)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Fullname")</strong></td>
+                <td>@Html.DisplayFor(model => model.Fullname)</td>
+            </tr>
+
+            <tr>
+                <td><strong>@Html.DisplayName("Email")</strong></td>
+                <td>@Html.DisplayFor(model => model.Email)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Date Registered")</strong></td>
+                <td>@Html.DisplayFor(model => model.FormattedDateCreated)</td>
+            </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Access Level")</strong></td>
+                <td>@Html.DisplayFor(model => model.UserLevel)</td>
+            </tr>
+        </table>
+        <p> @Html.ActionLink("Edit", "EditUser", new { id = Model.Id })</p>
+
+    </div>
+</div>
+
