--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteTrainer.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteTrainer.cshtml
@@ -16,6 +16,7 @@
     </ul>
 
     <div id="delete">
+        <p style="text-align:right;"><strong>@Html.ActionLink("Back", "TechnicalTrainers")</strong></p>
         <table class="table table-bordered">
             <tr>
                 <td><strong>@Html.DisplayName("First Name")</strong></td>
@@ -56,10 +57,7 @@
             <div class="form-group">
                 <p>
                     <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
-                    |
-            <label>OR</label>
-                    |
-        @Html.ActionLink("Back", "TechnicalTrainers")
+
                 </p>
             </div>
         }
