--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
@@ -68,7 +68,7 @@
                 <td>@Html.DisplayFor(model => model.PhoneNumber)</td>
             </tr>
             <tr>
-                <td><strong>@Html.DisplayName("Responsible Technology Trainer")</strong></td>
+                <td><strong>@Html.DisplayName("Responsible Technical Trainer")</strong></td>
                 <td>@Html.DisplayFor(model => model.TechnicalTrainer)</td>
             </tr>
             <tr>
