--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteVslaGroup.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteVslaGroup.cshtml
@@ -16,6 +16,7 @@
     </ul>
 
     <div id="delete">
+        <p><strong>@Html.ActionLink("Back", "VslaGroupInformation")</strong></p>
         <table class="table table-bordered">
             <tr>
                 <td><strong>@Html.DisplayName("VSLA Code")</strong></td>
@@ -81,10 +82,6 @@
    
                 <p>
                     <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
-                    |
-            <label>OR</label>
-                    |
-        @Html.ActionLink("Back", "VslaGroupInformation")
                 </p>
    
             }
