--- a/DigitizingDataAdminApp/Views/Dashboard/SystemUsers.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SystemUsers.cshtml
@@ -22,7 +22,7 @@
     <div id="systemuserstab">
         @if (@Model.SessionUserLevel != 1)
         {
-            <h6><strong>Below Is Your User Information</strong></h6>
+            <strong>Below Is Your User Information</strong>
         }
         <div style="width: auto; min-width: 900px; margin: 0 auto;">
             <table class="display" style="width: 100%; font-size: small;" id="data-table">
